fix: navigation width shift

--- a/src/components/Navigation/style.module.css
+++ b/src/components/Navigation/style.module.css
@@ -158,7 +158,7 @@
 	}
 	.wrap {
 		height: 5rem;
-		width: var(--nav-width, 42rem);
+		width: var(--nav-width, 10rem);
 	}
 }
 
